<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  
	<groupId>io.exonym</groupId>
	<artifactId>libexonymwallet</artifactId>
	<version>0.2</version>
	<packaging>jar</packaging>
	<name>libexonymwallet</name>
	<description>Wallet API for Command Line and Device</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<abc4TrustVersion>1.1.36</abc4TrustVersion>
		<idmxVersion>3.1.4</idmxVersion>
		<skipTests>true</skipTests>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<graalvmHome>${env.JAVA_HOME}</graalvmHome>
		<gluonfx.maven.plugin.version>1.0.18</gluonfx.maven.plugin.version>
		<gluonfx.target>host</gluonfx.target>
		<main.class>io.exonym.lib.wallet.WalletAPI</main.class>

		<javafx.version>${java.version}</javafx.version>
		<charm.version>6.2.2</charm.version>
		<charm.cloudlink.version>6.0.7</charm.cloudlink.version>
		<glisten.afterburner.version>2.1.0</glisten.afterburner.version>
		<attach.version>4.0.16</attach.version>
		<connect.version>2.0.1</connect.version>
		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>

	</properties>

<!--	<distributionManagement>-->
<!--		<repository>-->
<!--		<id>internal</id>-->
<!--		<url>https://repo.exonym.io/repository/internal/</url>-->
<!--		</repository>-->
<!--	</distributionManagement>-->

	<dependencies>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.55</version>
		</dependency>

		<dependency>
			<groupId>org.graalvm.nativeimage</groupId>
			<artifactId>svm</artifactId>
			<version>22.3.0</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.graalvm.truffle</groupId>
					<artifactId>truffle-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.4</version>
		    <scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.ibm.zurich.idmx</groupId>
			<artifactId>com.ibm.zurich.idmx.interfaces</artifactId>
			<version>${idmxVersion}</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.paho</groupId>
			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
			<version>1.2.5</version>
		</dependency>

		<dependency>
			<groupId>com.ibm.zurich.idmx</groupId>
			<artifactId>com.ibm.zurich.idmx.3_x_x</artifactId>
			<version>${idmxVersion}</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.google.dagger</groupId>
			<artifactId>dagger</artifactId>
			<version>2.44.2</version>
		</dependency>

		<!-- JAXB Core -->
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.3.0.1</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.activation</groupId>
					<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>

		</dependency>

		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.3</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun.activation</groupId>
					<artifactId>jakarta.activation</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.activation</groupId>
					<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.moxy &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>org.eclipse.persistence</groupId>-->
<!--			<artifactId>org.eclipse.persistence.moxy</artifactId>-->
<!--			<version>2.7.7</version>-->
<!--		</dependency>-->


		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.3</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.activation</groupId>
					<artifactId>jakarta.activation</artifactId>
				</exclusion>
			</exclusions>

		</dependency>


		<dependency>
			<groupId>org.apache.santuario</groupId>
			<artifactId>xmlsec</artifactId>
			<version>4.0.2</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-jaxb-annotations</artifactId>
			<version>2.15.0</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.activation</groupId>
					<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>

		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>4.12.0</version>
		</dependency>


		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.3.0</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.4.1</version>
		</dependency>

	</dependencies>
  <build>
   	<plugins>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<dependencies>
				<dependency>
					<groupId>com.google.dagger</groupId>
					<artifactId>dagger-compiler</artifactId>
					<version>2.44.2</version>
					<!--					<optional>true</optional>-->
				</dependency>
			</dependencies>
			<version>3.8.1</version>
			<configuration>
				<fork>true</fork>
				<release>${java.version}</release>
				<compilerArgs>
					<arg>--add-opens</arg>
					<arg>java.base/java.lang=ALL-UNNAMED</arg>
					<arg>--add-opens</arg>
					<arg>java.base/java.util=ALL-UNNAMED</arg>
				</compilerArgs>
			</configuration>
		</plugin>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-assembly-plugin</artifactId>
			<version>3.4.2</version>
			<configuration>
				<descriptorRefs>
					<descriptorRef>jar-with-dependencies</descriptorRef>
				</descriptorRefs>
			</configuration>
			<executions>
				<execution>
					<id>assemble-all</id>
					<phase>package</phase>
					<goals>
						<goal>single</goal>
					</goals>
				</execution>
			</executions>
		</plugin>

		<plugin>
			<groupId>com.gluonhq</groupId>
			<artifactId>gluonfx-maven-plugin</artifactId>
			<version>${gluonfx.maven.plugin.version}</version>
			<configuration>
				<target>${gluonfx.target}</target>
				<mainClass>${main.class}</mainClass>
				<graalvmHome>${graalvmHome}</graalvmHome>
<!--				/Library/Java/JavaVirtualMachines/graalvm-svm-java17-darwin-m1-gluon-22.1.0.1-Final/Contents/Home-->
				<nativeImageArgs>
					<arg>-H:-CheckToolchain</arg>
					<arg>--enable-url-protocols=https</arg>
					<!-- Optimization Flags -->
					<arg>--no-fallback</arg>
					<arg>-O5</arg>
					<arg>-H:+RemoveUnusedSymbols</arg>
					<arg>--gc=serial</arg>
<!--					<arg>&#45;&#45;initialize-at-build-time=java.util.logging.LogManager</arg>-->
<!--					<arg>&#45;&#45;trace-class-initialization=java.util.logging.LogManager</arg>-->
				</nativeImageArgs>
			</configuration>
		</plugin>

	</plugins>
   <resources>
	 <resource>
	   <directory>resource/</directory>
	 </resource>
   </resources>
</build>
	<profiles>
		<profile>
			<id>ios</id>
			<properties>
				<gluonfx.target>ios</gluonfx.target>
			</properties>
		</profile>
		<profile>
			<id>android</id>
			<properties>
				<gluonfx.target>android</gluonfx.target>
			</properties>
		</profile>

		<!-- Default Profile (Fat Jar) -->
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.4.2</version>
						<configuration>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
						<executions>
							<execution>
								<id>assemble-all</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>unity</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<resources>
					<resource>
						<directory>resource</directory>
						<includes>
							<include>lambda.xml</include>
							<include>issuer-for-verifier-params.xml</include>
						</includes>
					</resource>
					<resource>
						<directory>src/main/java</directory>
						<includes>
							<include>**/jaxb.properties</include>
						</includes>
					</resource>
				</resources>
				<plugins>
					<!-- Maven Shade Plugin -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.4.1</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
									<artifactSet>
										<includes>
											<include>com.ibm.zurich.idmx:com.ibm.zurich.idmx.interfaces</include>
											<include>eu.abc4trust.ri:abc4trust-xml</include>
											<include>eu.abc4trust.ri:abce-interfaces</include>
											<include>com.ibm.zurich.idmx:com.ibm.zurich.idmx.3_x_x</include>
										</includes>
										<excludes>
											<exclude>javax.xml.bind:jaxb-api</exclude>
											<exclude>com.googlecode.jaxb-namespaceprefixmapper-interfaces:JAXBNamespacePrefixMapper</exclude>
											<exclude>com.sun.xml.bind:jaxb-core</exclude>
											<exclude>com.sun.xml.bind:jaxb-impl</exclude>
											<exclude>javax.activation:javax.activation-api</exclude>
											<exclude>javax.inject:javax.inject</exclude>
											<exclude>org.xmlunit:xmlunit-core</exclude>
											<exclude>commons-codec:commons-codec</exclude>
											<exclude>com.google.code.gson:gson</exclude>
											<exclude>com.jcraft:jsch</exclude>
											<exclude>org.graalvm.nativeimage:svm</exclude>
											<exclude>org.graalvm.sdk:graal-sdk</exclude>
											<exclude>org.graalvm.nativeimage:objectfile</exclude>
											<exclude>org.graalvm.nativeimage:pointsto</exclude>
											<exclude>org.graalvm.compiler:compiler</exclude>
											<exclude>org.graalvm.nativeimage:native-image-base</exclude>
											<exclude>junit:junit</exclude>
											<exclude>org.eclipse.paho:org.eclipse.paho.client.mqttv3</exclude>
											<exclude>commons-logging:commons-logging</exclude>
											<exclude>com.google.dagger:dagger</exclude>
											<exclude>org.apache.santuario:xmlsec</exclude>
											<exclude>com.fasterxml.woodstox:woodstox-core</exclude>
											<exclude>org.codehaus.woodstox:stax2-api</exclude>
											<exclude>com.fasterxml.jackson.module:jackson-module-jaxb-annotations</exclude>
											<exclude>com.fasterxml.jackson.core:jackson-annotations</exclude>
											<exclude>com.fasterxml.jackson.core:jackson-core</exclude>
											<exclude>com.fasterxml.jackson.core:jackson-databind</exclude>
											<exclude>org.apache.commons:commons-lang3</exclude>
											<exclude>com.squareup.okhttp3:okhttp</exclude>
											<exclude>com.squareup.okio:okio</exclude>
											<exclude>com.squareup.okio:okio-jvm</exclude>
											<exclude>org.jetbrains.kotlin:kotlin-stdlib-common</exclude>
											<exclude>org.jetbrains.kotlin:kotlin-stdlib-jdk8</exclude>
											<exclude>org.jetbrains.kotlin:kotlin-stdlib</exclude>
											<exclude>org.jetbrains:annotations</exclude>
											<exclude>org.jetbrains.kotlin:kotlin-stdlib-jdk7</exclude>
											<exclude>com.google.zxing:core</exclude>
											<exclude>com.google.zxing:javase</exclude>
											<exclude>com.beust:jcommander</exclude>
											<exclude>com.github.jai-imageio:jai-imageio-core</exclude>

										</excludes>
									</artifactSet>
									<filters>
										<filter>
											<artifact>*:*</artifact>
											<excludes>
												<!--												<exclude>META-INF/sun-jaxb.episode</exclude>-->
												<exclude>META-INF/native-image</exclude>
												<exclude>META-INF/substrate</exclude>
												<exclude>META-INF/LICENSE.md</exclude>
												<exclude>META-INF/*.SF</exclude>
												<exclude>META-INF/*.DSA</exclude>
												<exclude>META-INF/*.RSA</exclude>
											</excludes>
										</filter>
									</filters>
									<transformers>
										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
											<mainClass>com.example.Main</mainClass>
										</transformer>
										<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
											<resource>META-INF/sun-jaxb.episode</resource>
										</transformer>
									</transformers>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

<!--	<repositories>-->
<!--		<repository>-->
<!--			<id>internal</id>-->
<!--			<name>Archiva Managed Internal Repository</name>-->
<!--			<url>https://repo.exonym.io/repository/internal/</url>-->
<!--			<releases>-->
<!--				<enabled>true</enabled>-->
<!--			</releases>-->
<!--			<snapshots>-->
<!--				<enabled>false</enabled>-->
<!--			</snapshots>-->
<!--		</repository>-->
<!--	</repositories>-->
<!--	<pluginRepositories>-->
<!--		<pluginRepository>-->
<!--			<id>internal</id>-->
<!--			<name>Archiva Managed Internal Repository</name>-->
<!--			<url>https://repo.exonym.io/repository/internal/</url>-->
<!--			<releases>-->
<!--				<enabled>true</enabled>-->
<!--			</releases>-->
<!--			<snapshots>-->
<!--				<enabled>false</enabled>-->
<!--			</snapshots>-->
<!--		</pluginRepository>-->
<!--	</pluginRepositories>-->

</project>
